# c-embed

./: CMakeLists.txt  README.md  embed.c
